# ros_yolov5

devel/: .catkin  _setup_util.py  local_setup.sh  setup.sh
devel/lib/hello_vscode/: hello_vscode_c
devel/lib/my_detect/: my_pub  my_sub
devel/lib/my_image_transport/: my_publisher  my_subscriber
devel/lib/pkgconfig/: hello_vscode.pc  learning_nodelet.pc  my_detect.pc  my_image_transport.pc  nodelet_yolov5.pc  plumbing_pub_sub.pc  tf01_static.pc  tf02_dynamic.pc
devel/lib/plumbing_pub_sub/: demo01_pub  demo02_sub
devel/lib/tf01_static/: demo01_static_sub
devel/lib/tf02_dynamic/: demo01_dynamic_sub
devel/share/hello_vscode/cmake/: hello_vscodeConfig.cmake
devel/share/learning_nodelet/cmake/: learning_nodeletConfig.cmake
devel/share/my_detect/cmake/: my_detectConfig.cmake
src/hello_vscode/src/: hello_vscode_c.cpp
src/image_detect/: CMakeLists.txt  package.xml
src/image_detect/src/: image_pub.cpp  image_sub.cpp
src/learning_nodelet/: CMakeLists.txt  myplus.xml  package.xml
src/learning_nodelet/launch/: second_nodelet.launch
src/learning_nodelet/src/: myplus.cpp
src/nodelet_yolov5/: CMakeLists.txt  myyolo.xml
src/nodelet_yolov5/launch/: yolo.launch
src/nodelet_yolov5/src/: myyolo.cpp
src/plumbing_pub_sub/src/: demo01_pub.cpp  demo02_sub.cpp
src/ros_yolov5/: CMakeLists.txt
src/ros_yolov5/src/: my_pub.cpp  my_sub.cpp
src/tf01_static/: CMakeLists.txt
src/tf01_static/src/: demo01_static_pub.cpp  demo01_static_sub.cpp
src/tf02_dynamic/: package.xml
src/tf02_dynamic/src/: demo01_dynamic_pub.cpp
(+5 files in other folders)
